PDI-631 : Main step loop code cleanup: move to central static final method
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@6364 5fb7f6ec-07c1-534a-b4ca-9155e429e800